# RubikCubeProject

./: CMakeLists.txt  CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  DFSSOLVER.h  GenericRubikCube.cpp  GenericRubikCube.h  IDASTARSOLVER.h  IDDFSSOLVER.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  README.md  RubikCube1DArray.cpp  RubikCube3DArray.cpp  RubikCubeBitboard.cpp  main.cpp  math.cpp  math.h
